Добавлены функции для обработки запросов с фронта.